--- a/TotalVendor/StoryBoards/Base.lproj/Main.storyboard
+++ b/TotalVendor/StoryBoards/Base.lproj/Main.storyboard
@@ -4617,16 +4617,6 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="apb-we-P9b">
-                                        <rect key="frame" x="0.0" y="135" width="414" height="1"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="1" id="jKe-Ov-xsv"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zDh-X9-hsi">
                                         <rect key="frame" x="0.0" y="84" width="414" height="1"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -4638,7 +4628,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H4H-Jn-66f">
-                                        <rect key="frame" x="0.0" y="136" width="414" height="1190"/>
+                                        <rect key="frame" x="0.0" y="85" width="414" height="1241"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cYc-dr-U7c">
                                                 <rect key="frame" x="0.0" y="5" width="414" height="585"/>
@@ -5231,7 +5221,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="cYc-dr-U7c" firstAttribute="leading" secondItem="H4H-Jn-66f" secondAttribute="leading" id="HrJ-Wm-t0B"/>
-                                            <constraint firstItem="cYc-dr-U7c" firstAttribute="top" secondItem="H4H-Jn-66f" secondAttribute="top" constant="5" id="KYa-Ta-1C8"/>
+                                            <constraint firstItem="cYc-dr-U7c" firstAttribute="top" secondItem="H4H-Jn-66f" secondAttribute="top" constant="5" id="sM7-Zl-qdb"/>
                                             <constraint firstAttribute="trailing" secondItem="cYc-dr-U7c" secondAttribute="trailing" id="zif-3T-tQO"/>
                                         </constraints>
                                     </view>
@@ -5244,7 +5234,17 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pAJ-Ve-5f2">
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="apb-we-P9b">
+                                        <rect key="frame" x="0.0" y="135" width="414" height="1"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="jKe-Ov-xsv"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pAJ-Ve-5f2">
                                         <rect key="frame" x="8" y="90" width="396" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="Td4-ci-3T1"/>
@@ -5272,6 +5272,7 @@
                                     <constraint firstAttribute="trailing" secondItem="zDh-X9-hsi" secondAttribute="trailing" id="JDe-Sy-eMn"/>
                                     <constraint firstAttribute="trailing" secondItem="pAJ-Ve-5f2" secondAttribute="trailing" constant="10" id="PwR-CS-WkF"/>
                                     <constraint firstItem="apb-we-P9b" firstAttribute="leading" secondItem="eZe-qX-QDJ" secondAttribute="leading" id="Tuj-ib-yCN"/>
+                                    <constraint firstItem="H4H-Jn-66f" firstAttribute="top" secondItem="zDh-X9-hsi" secondAttribute="bottom" id="UCK-GJ-PDr"/>
                                     <constraint firstItem="oSM-Gh-kg4" firstAttribute="top" secondItem="eZe-qX-QDJ" secondAttribute="top" constant="20" id="Y9g-By-n6n"/>
                                     <constraint firstItem="pAJ-Ve-5f2" firstAttribute="top" secondItem="zDh-X9-hsi" secondAttribute="bottom" constant="5" id="akZ-hF-Jq0"/>
                                     <constraint firstAttribute="trailing" secondItem="S0J-VY-Quz" secondAttribute="trailing" constant="5" id="ccY-7K-ReE"/>
@@ -5279,7 +5280,6 @@
                                     <constraint firstItem="S0J-VY-Quz" firstAttribute="leading" secondItem="oSM-Gh-kg4" secondAttribute="trailing" constant="5" id="hD4-Iv-vzG"/>
                                     <constraint firstAttribute="trailing" secondItem="H4H-Jn-66f" secondAttribute="trailing" id="hls-hR-ncB"/>
                                     <constraint firstItem="zDh-X9-hsi" firstAttribute="top" secondItem="oSM-Gh-kg4" secondAttribute="bottom" constant="4" id="q0O-W1-KUT"/>
-                                    <constraint firstItem="H4H-Jn-66f" firstAttribute="top" secondItem="apb-we-P9b" secondAttribute="bottom" id="tEg-uq-PAo"/>
                                     <constraint firstItem="H4H-Jn-66f" firstAttribute="leading" secondItem="eZe-qX-QDJ" secondAttribute="leading" id="zPf-CF-JXe"/>
                                 </constraints>
                             </view>
